# markdown-spacer

./: .flake8  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  README.md  mypy.ini  performance_report.json  performance_report.txt  pyproject.toml  requirements-dev.txt  requirements.txt  test_performance.md
docs/: 01-documentation-standards.md  README.md
docs/design/: 01-technical-design.md  02-environment-setup.md  03-architecture-overview.md  04-spacing-algorithm-plan.md  05-file-handler-plan.md  06-cli-interface-plan.md  07-large-file-processing-design.md  07-performance-optimization-plan.md  08-large-file-processing-design.md  09-spacing-business-rule-refine-plan.md  10-real-world-validation-results.md
docs/project/: 01-todo-list.md  02-performance-optimization-plan.md
docs/requirements/: 01-markdown-spacer-requirements.md
docs/sessions/: README.md  session-2025-07-20.md  session-2025-07-22.md  session-2025-07-23.md
docs/standards/: 01-workflow-guide.md  02-content-standards.md  03-role-switching-guide.md  04-task-collaboration.md  05-code-style-guide.md  06-versioning-changelog.md  07-collaboration-commands.md  (+2 more)
scripts/debug/: README.md  (+1 more)
src/: __init__.py  markdown_spacer.py
tests/: test_basic_imports.py  test_chunked_processor.py  test_cli_integration.py  test_cli_parser.py  test_config.py  test_exceptions.py  test_file_handler.py  test_file_handler_integration.py  test_formatter.py  test_main_integration.py  test_performance.py  test_performance_optimization.py  test_performance_report.py  test_smart_processor.py  test_streaming_processor.py
(+13 files in other folders)
